# gwtc_analysis

./: .gitignore  .shed.yml  Description_Anaconda.md  README.md  pyproject.toml
.github/workflows/: dockerhub-description.yml  release.yml
conda-recipe/: meta.yaml
docker/: Dockerfile  environment.yml
galaxy/: gwtc_analysis.xml
galaxy/test-data/: gwtc_small.json
gwtc_analysis/: catalogs.py  cli.py  data_repo.py  event_selection.py  gen_readme_cli_tables.py  gw_stat.py  gwpe_utils.py  parameters_estimation.py  read_skymap.py  repo_config.py  report.py  search_skymaps.py  unofficial_pe.py
tests/: conftest.py  test_galaxy_smoke.py  test_s3_smoke.py  test_zenodo_smoke.py
