[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gwtc_analysis"
version = "0.2.6"
description = "GWTC analysis tool"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "minio",
  "requests",
]

[project.scripts]
gwtc_analysis = "gwtc_analysis.cli:main"

[tool.setuptools]
packages = ["gwtc_analysis"]

