[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gwtc_analysis"
version = "0.4.2"
description = "GWTC analysis tool"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "minio",
  "requests",
]

readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }

[project.optional-dependencies]
test = ["pytest", "requests"]

[project.scripts]
gwtc_analysis = "gwtc_analysis.cli:main"

[tool.setuptools]
packages = ["gwtc_analysis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
markers = [
  "network: test reaches out over the network (usegalaxy.org / zenodo.org / MinIO); skips if unreachable",
]
